# lnad

./: .gitignore  README.md  meta.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
examples/: example1.ipynb  example2.ipynb
lnad/: analysis.py  dismantling.py  geonetwork.py
tests/: test_lnad.py
